--- a/week8/wks8.1.html
+++ b/week8/wks8.1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <script type="text/javascript" src="wks8.1.js"></script>
-  <script type="text/javascript" src="../webgl-utils.js"></script>
-  <script type="text/javascript" src="../MV.js"></script>
-  <script type="text/javascript" src="../initShaders.js"></script>
+  <script type="text/javascript" src="..common/webgl-utils.js"></script>
+  <script type="text/javascript" src="..common/MV.js"></script>
+  <script type="text/javascript" src="..common/initShaders.js"></script>
   <script id="vertex-shader" type="x-shader/x-vertex">
 
     attribute vec4 a_position;
