--- a/week1/wks1.3.html
+++ b/week1/wks1.3.html
@@ -25,9 +25,9 @@
         </script>
 
 <script type="text/javascript" src="wks1.3.js"></script>
-<script type ="text/javascript" src="webgl-utils.js"></script>
-<script type ="text/javascript" src="MV.js"></script>
-<script type ="text/javascript" src="initShaders.js"></script>
+<script type ="text/javascript" src="..\common\webgl-utils.js"></script>
+<script type ="text/javascript" src="..\common\MV.js"></script>
+<script type ="text/javascript" src="..\common\initShaders.js"></script>
 
 
 
