--- a/week2/wks2.1.html
+++ b/week2/wks2.1.html
@@ -26,23 +26,12 @@
         </script>
 
 <script type="text/javascript" src="wks2.1.js"></script>
-<script type ="text/javascript" src="webgl-utils.js"></script>
-<script type ="text/javascript" src="MV.js"></script>
-<script type ="text/javascript" src="initShaders.js"></script>
-
-
+<script type ="text/javascript" src="..\common\webgl-utils.js"></script>
+<script type ="text/javascript" src="..\common\MV.js"></script>
+<script type ="text/javascript" src="..\common\initShaders.js"></script>
 
 <body>
-<select id="mymenu" size = "3">
-    <option value = "0">Orange</option>
-    <option value = "1">Purple</option>
-    <option value = "2">Green</option>
-</select>
-<select id="colormenu" size = "3">
-    <option value = "0">First Color</option>
-    <option value = "1">Second Color</option>
-    <option value = "2">Third Color</option>
-</select>
 
 <canvas id="canvas" width="512" height="512"></canvas>
+<button type="button" id ="pointButton">Draw Points</button>
 </body></html>
