--- a/week2/wks2.4.html
+++ b/week2/wks2.4.html
@@ -25,7 +25,7 @@
         }
         </script>
 
-<script type="text/javascript" src="wks2.3.js"></script>
+<script type="text/javascript" src="wks2.4.js"></script>
 <script type ="text/javascript" src="..\common\webgl-utils.js"></script>
 <script type ="text/javascript" src="..\common\MV.js"></script>
 <script type ="text/javascript" src="..\common\initShaders.js"></script>
@@ -42,7 +42,7 @@
 </select> 
 <br>
 <button id ="pointsButton">Draw Points</button>
-<label for = "mymenu">Choose Point Color:</label>
+<label for = "mymenu">Choose Point/Triangle/Circle Color:</label>
 <select  id="colormenu" >
     <option value = "0" selected>Black</option>
     <option value = "1">Magenta</option>
@@ -50,7 +50,8 @@
 </select>
 <br>
 <button id ="triangleButton">Triangle</button>
-
+<br>
+<button id ="circleButton">Circle</button>
 
 
 </body></html>
