--- a/week3/wks3.1.html
+++ b/week3/wks3.1.html
@@ -13,7 +13,7 @@
         main()
         {   
             
-            gl_Position = 0.5*VLoc*PLoc* a_position;
+            gl_Position = PLoc*VLoc* a_position;
             v_color = a_color;
             
         }
