--- a/week3/wks3.2.html
+++ b/week3/wks3.2.html
@@ -39,9 +39,9 @@
   </script>
 
   <script type="text/javascript" src="wks3.2.js"></script>
-  <script type="text/javascript" src="webgl-utils.js"></script>
-  <script type="text/javascript" src="MV.js"></script>
-  <script type="text/javascript" src="initShaders.js"></script>
+  <script type ="text/javascript" src="..\common\webgl-utils.js"></script>
+        <script type ="text/javascript" src="..\common\MV.js"></script>
+        <script type ="text/javascript" src="..\common\initShaders.js"></script>
 
   <body>
     <canvas id="canvas" width="512" height="512"></canvas>
