--- a/week4/wks4.1.html
+++ b/week4/wks4.1.html
@@ -2,29 +2,21 @@
 <html>
   <script id="vertex-shader" type="x-shader/x-vertex">
     attribute vec4 a_position;
-
-    attribute vec4 a_color;
     uniform mat4 PLoc;
     uniform mat4 VLoc;
     uniform mat4 MLoc;
-    varying vec4 v_color;
-
-
+ 
     void
     main()
     {
-
-
-                gl_Position = PLoc*VLoc*MLoc*a_position;
-               // gl_Position.z = -gl_Position.z;
-                v_color = a_color;
-
-            }
+      gl_Position = PLoc*VLoc*MLoc*a_position;
+    
+     }
   </script>
 
   <script id="fragment-shader" type="x-shader/x-fragment">
     precision mediump float;
-    varying vec4 v_color;
+  
     void
     main()
     {
@@ -38,9 +30,10 @@
 
   <p></p>
   <script type="text/javascript" src="wks4.1.js"></script>
-  <script type="text/javascript" src="webgl-utils.js"></script>
-  <script type="text/javascript" src="MV.js"></script>
-  <script type="text/javascript" src="initShaders.js"></script>
+  <script type ="text/javascript" src="..\common\webgl-utils.js"></script>
+  <script type ="text/javascript" src="..\common\MV.js"></script>
+  <script type ="text/javascript" src="..\common\initShaders.js"></script>
+        
 
   <body>
     <canvas id="canvas" width="512" height="512"></canvas>
