--- a/week4/wks4.4.html
+++ b/week4/wks4.4.html
@@ -15,7 +15,6 @@
     uniform vec4 ka; //ambient comp
     uniform vec4 ks; //specular comp
     uniform float s; //shininess
-
     uniform vec4 lightPos; // pl , w_i -> normalize(-pl)
     varying vec4 v_color;
     varying vec3 N;
@@ -30,29 +29,25 @@
     main()
     {
 
+      vec4 pos = (MLoc*a_position);
+      vec3 light = (VLoc*lightPos).xyz;
+      N = normalize(NLoc*(vNormal).xyz);
+      w_i = lightPos.w == 0.0 ? normalize(light) : normalize(light - pos.xyz);
+      w_r = 2.0 * (dot(w_i,N)) * N - w_i;
+      w_o = normalize(eyePoint - pos.xyz);
 
-                vec4 pos = (MLoc*a_position);
-                vec3 light = (VLoc*lightPos).xyz;
-                N = normalize(NLoc*(vNormal).xyz);
-                w_i = lightPos.w == 0.0 ? normalize(light) : normalize(light - pos.xyz);
-                w_r = 2.0 * (dot(w_i,N)) * N - w_i;
-                w_o = normalize(eyePoint - pos.xyz);
+      gl_Position = PLoc*VLoc*pos;
 
-                gl_Position = PLoc*VLoc*pos;
-                //gl_Position.z = -gl_Position.z;
+      float Kd = max(dot(w_i, N), 0.0);
+      float Ks = pow(max(dot(w_r,w_o),0.0),s);
 
-                float Kd = max(dot(w_i, N), 0.0);
-                float Ks = pow(max(dot(w_r,w_o),0.0),s);
+      vec4 diffuse = Kd*Le*kd;
+      vec4 specular = Ks*Le*ks;
+      vec4 ambient = Le*ka;
 
-                vec4 diffuse = Kd*Le*kd;
-                vec4 specular = Ks*Le*ks;
-                vec4 ambient = Le*ka;
+      v_color = diffuse + specular + ambient;
 
-                v_color = diffuse + specular;
-
-
-
-            }
+    }
   </script>
 
   <script id="fragment-shader" type="x-shader/x-fragment">
@@ -62,28 +57,25 @@
     void
     main()
     {
-
         gl_FragColor = v_color;
     }
   </script>
 
   <style>
-    /* Style for the container div */
+
     .slider-container {
-      float: left; /* Float the container to the right */
-      margin-right: 10px; /* Add some right margin for spacing */
+      float: left; 
+      margin-right: 10px; 
     }
 
-    /* Style for the list items */
     ul li {
-      list-style: none; /* Remove the default list bullet */
-      margin-bottom: 10px; /* Add some bottom margin for spacing between items */
+      list-style: none; 
+      margin-bottom: 10px; 
     }
 
-    /* Style for the sliders */
     input[type="range"] {
-      width: 100px; /* Set the width of the sliders */
-      float: right; /* Float the sliders to the right */
+      width: 100px; 
+      float: right; 
     }
   </style>
 
@@ -143,19 +135,15 @@
       </li>
       <p></p>
       <li><button id="Button1">Increase Subdivisions</button></li>
-
       <li><button id="Button2">Decrease Subdivisions</button></li>
-      <li><button id="Button3">Rotate View</button></li>
-
       <p></p>
     </ul>
   </div>
 
   <script type="text/javascript" src="wks4.4.js"></script>
-  <script type="text/javascript" src="webgl-utils.js"></script>
-  <script type="text/javascript" src="MV.js"></script>
-  <script type="text/javascript" src="initShaders.js"></script>
-
+  <script type ="text/javascript" src="..\common\webgl-utils.js"></script>
+  <script type ="text/javascript" src="..\common\MV.js"></script>
+  <script type ="text/javascript" src="..\common\initShaders.js"></script>
   <body>
     <canvas id="canvas" width="512" height="512"></canvas>
   </body>
