--- a/week5/wks5.1.html
+++ b/week5/wks5.1.html
@@ -72,12 +72,12 @@
         gl_FragColor = fColor;
     }
   </script>
-  <script type="text/javascript" src="final.js"></script>
-
-  <script type="text/javascript" src="common/webgl-utils.js"></script>
-  <script type="text/javascript" src="common/MV.js"></script>
-  <script type="text/javascript" src="common/initShaders.js"></script>
-  <script type="text/javascript" src="common/OBJParser.js"></script>
+  <script type="text/javascript" src="wks5.1.js"></script>
+  <script type ="text/javascript" src="..\common\webgl-utils.js"></script>
+  <script type ="text/javascript" src="..\common\MV.js"></script>
+  <script type ="text/javascript" src="..\common\initShaders.js"></script>
+  <script type ="text/javascript" src="..\common\OBJParser.js"></script>
+  
   <body>
     <canvas id="canvas" width="512" height="512"></canvas>
     <button id="toggleRotation">Toggle Rotation</button>
