--- a/week5/wks5.1.html
+++ b/week5/wks5.1.html
@@ -76,7 +76,7 @@
   <script type ="text/javascript" src="..\common\webgl-utils.js"></script>
   <script type ="text/javascript" src="..\common\MV.js"></script>
   <script type ="text/javascript" src="..\common\initShaders.js"></script>
-  <script type ="text/javascript" src="..\common\OBJParser.js"></script>
+  <script type ="text/javascript" src="OBJParser.js"></script>
   
   <body>
     <canvas id="canvas" width="512" height="512"></canvas>
