change in texture

--- a/project/project.html
+++ b/project/project.html
@@ -126,6 +126,6 @@
       </div>
     </div>
     <button id="toggleRotation">Toggle Rotation</button>
-    <img id="potion" src="texture.png" hidden />
+    <img id="potion" src="chocolate.png" hidden />
   </body>
 </html>
