--- a/week6/wk6.1.html
+++ b/week6/wk6.1.html
@@ -3,12 +3,11 @@
   <script id="vertex-shader" type="x-shader/x-vertex">
 
     attribute vec4 a_position;
+    attribute vec2 vTexCoord;
 
     uniform mat4 PLoc;
     uniform mat4 VLoc;
-
-    attribute vec2 vTexCoord;
-
+    
     varying vec2 fTexCoord;
 
     void main(){
@@ -28,9 +27,9 @@
   </script>
 
   <script type="text/javascript" src="wk6.1.js"></script>
-  <script type="text/javascript" src="webgl-utils.js"></script>
-  <script type="text/javascript" src="MV.js"></script>
-  <script type="text/javascript" src="initShaders.js"></script>
+  <script type ="text/javascript" src="..\common\webgl-utils.js"></script>
+  <script type ="text/javascript" src="..\common\MV.js"></script>
+  <script type ="text/javascript" src="..\common\initShaders.js"></script>
 
   <body>
     <canvas id="canvas" width="512" height="512"></canvas>
