--- a/week6/wk6.3.html
+++ b/week6/wk6.3.html
@@ -16,7 +16,6 @@
     uniform mat4 VLoc;
     uniform mat4 MLoc;
     uniform mat3 NLoc;
-    uniform vec4 diffuseProduct;
     uniform vec4 lightPos; // pl , w_i -> normalize(-pl)
 
     void
@@ -28,8 +27,6 @@
       w_i = lightPos.w == 0.0 ? normalize(light) : normalize(light - pos.xyz);
 
       gl_Position = PLoc*VLoc*pos;
-
-      float Kd = max(dot(w_i, N), 0.0);
       normal = vNormal;
 
     }
@@ -37,27 +34,26 @@
 
   <script id="fragment-shader" type="x-shader/x-fragment">
     precision mediump float;
+    uniform sampler2D texMap;
+    uniform vec4 Le; //Light emission
     varying vec4 v_color;
     varying vec4 normal;
-    uniform sampler2D texMap;
-
+    varying vec3 w_i;
+    varying vec3 N;
+    
     void
     main()
     {  
+      vec4 kd,ka;
       vec2 vTexCoord;
-
+      float Kd = max(dot(w_i, N), 0.0);
       vTexCoord.x = 1.0 - atan(normal.z, normal.x)/(2.0 * 3.14);
       vTexCoord.y = acos(normal.y)/3.14;
-      gl_FragColor = texture2D(texMap, vTexCoord);
+      ka = texture2D(texMap, vTexCoord);
+      kd = texture2D(texMap, vTexCoord);
+      gl_FragColor = Kd*Le*kd + ka;
     }
   </script>
-
-  <p></p>
-  <button id="Button1">Increase Subdivisions</button>
-  <button id="Button2">Decrease Subdivisions</button>
-  <button id="Button3">Rotate View</button>
-
-  <p></p>
 
   <script type="text/javascript" src="wk6.3.js"></script>
   <script type ="text/javascript" src="..\common\webgl-utils.js"></script>
