--- a/week6/wk6.3.html
+++ b/week6/wk6.3.html
@@ -62,6 +62,7 @@
 
   <body>
     <canvas id="canvas" width="512" height="512"></canvas>
+    <button id="toggleButton">Toggle Rotation</button>
     <img id="earth" src="earth.jpeg" hidden />
   </body>
 </html>
