--- a/week5/wks5.1.html
+++ b/week5/wks5.1.html
@@ -70,5 +70,6 @@
   <body>
     <canvas id="canvas" width="512" height="512"></canvas>
     <button id="toggleRotation">Toggle Rotation</button>
+    <p>I run the program locally</p>
   </body>
 </html>
