--- a/week6/wk6.3.html
+++ b/week6/wk6.3.html
@@ -64,5 +64,9 @@
     <canvas id="canvas" width="512" height="512"></canvas>
     <button id="toggleButton">Toggle Rotation</button>
     <img id="earth" src="earth.jpeg" hidden />
+    <p>
+      I use LINEAR_MINMAP_NEAREST for minification for it reduce blurring
+      and LINEAR for magnification for a sharper result. 
+    </p>
   </body>
 </html>
