--- a/week8/wks8.3.html
+++ b/week8/wks8.3.html
@@ -30,12 +30,9 @@
     varying float shadow;
 
     void main(){
-        if(shadow==1.0){
-            gl_FragColor = vec4(0.0,0.0,0.0,1.0);
-        }
-        else{
-        gl_FragColor = texture2D(texMap,fTexCoord);}
-    }
+      
+        gl_FragColor = vec4(vec3(shadow),1.0)*texture2D(texMap,fTexCoord);}
+    
   </script>
 
   <body>
