--- a/week8/wks8.4.html
+++ b/week8/wks8.4.html
@@ -30,9 +30,9 @@
     varying float shadow;
 
     void main(){
-        if(shadow==1.0){
+        if(shadow==0.0){
             //change to a more transparent shadow
-            gl_FragColor = vec4(0.0,0.0,0.0,0.6);
+            gl_FragColor = vec4(0.0,0.0,0.0,0.6)*texture2D(texMap,fTexCoord);
         }
         else{
         gl_FragColor = texture2D(texMap,fTexCoord);}
